--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+/* border-box */
+html { box-sizing: border-box; }
+*, *:before, *:after { box-sizing: inherit; }
+
+/* clearfix */
+.group:before,
+.group:after { content: " "; display: table; }
+.group:after { clear: both; }
+
+
 body {
     background: #172B4D;
     text-align: center;
@@ -6,9 +16,98 @@ body {
     margin: 0 auto;
 }
 
-h1 {
-    padding-bottom: 1.3em;
-    padding-top: 1.3em;
-    color: #fff;
+header {
+    border-bottom: #dcd8d8 solid 2px;
 }
 
+h1 {
+    margin-top: 30px;
+    margin-bottom: 25px;
+    color:#dcd8d8;
+}
+
+.menu {
+	margin: 0;
+	list-style: none;
+	padding-left: 0;
+}
+
+.menu li,
+.menu a {
+	display: inline-block;
+}
+
+nav a {
+	font-size: 20px;
+	text-align: center;
+	display: inline-block;
+	padding: 20px 18px;
+}
+
+nav a {
+	color: #dcd8d8;
+    text-decoration: none;
+}
+
+nav a:hover,
+nav a:focus {
+	color: #9f9f9f;
+}
+
+.ul-table {
+    text-align: left;
+    color:#dcd8d8;
+   
+}
+
+.ul-table li {
+    margin-top: 10px;
+}
+
+.sql-h1 h1 {
+    padding-bottom: -50px;
+    margin-bottom: -50px;
+}
+
+h3 {
+    text-align: left;
+    color:#dcd8d8;
+    font-weight: 300;
+}
+
+a {
+    color:#9f9f9f;
+    text-decoration: none;
+}
+
+.last-li {
+    margin-bottom: 20px;
+}
+
+.sql-img {
+    max-width: 450px;
+    margin-top: 15px;
+    
+}
+
+img {
+    border: 1px;
+    border-radius: 4px;
+    text-align: center;
+}
+
+ol li {
+    text-align: left;
+    color:#dcd8d8;
+    margin-bottom: 10px;
+}
+
+a:hover,
+a:focus {
+	color: #dcd8d8;
+}
+
+p {
+    text-align: left;
+    color:#dcd8d8
+}
