--- a/css/cv.css
+++ b/css/cv.css
@@ -232,6 +232,10 @@ section:nth-child(2) {
 }
 @media (max-width: 500px) {
   .column-6 {
-    height: 620px;
+    height: 650px;
+  }
+
+  .text {
+    height: 1160px;
   }
 }
