--- a/css/cv.css
+++ b/css/cv.css
@@ -240,3 +240,13 @@ section:nth-child(2) {
     height: 1270px;
   }
 }
+
+@media (max-width: 200px) {
+  .column-6 {
+    height: 750px;
+  }
+
+  .text {
+    height: 1270px;
+  }
+}
